--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -20,4 +20,16 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <!-- Strings related to menu -->
+    <string name="settings">Settings</string>
+    <string name="share">Share</string>
+    <string name="send">Send</string>
+    <string name="more">More</string>
+    <string name="add">Add</string>
+    <string name="save">Save</string>
+    <string name="all">All</string>
+    <string name="communicate">Communicate</string>
+    <string name="profile">Profile</string>
+
 </resources>
